# cicd-devpath

./: README.md
.github/workflows/: ci-cd.yml
github-actions-fastapi/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  update-requirements.sh
github-actions-fastapi/.github/workflows/: ci-cd.yml
github-actions-fastapi/app/: main.py
github-actions-fastapi/docs/: learnings.md  pipeline-architecture.md
github-actions-fastapi/tests/: test_main.py
